build/log/idf_py_stderr_output_45321
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c: In function 'websocket_event_handler':
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:246:21: error: 'ai_response_complete' undeclared (first use in this function)
  246 |                     ai_response_complete = true;  // Signal waiting task
      |                     ^~~~~~~~~~~~~~~~~~~~
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:246:21: note: each undeclared identifier is reported only once for each function it appears in
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c: In function 'websocket_stream_task':
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:452:13: error: 'ai_response_complete' undeclared (first use in this function)
  452 |     while (!ai_response_complete) {
      |             ^~~~~~~~~~~~~~~~~~~~
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c: In function 'recorder_event_cb':
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:498:13: error: 'ai_response_complete' undeclared (first use in this function)
  498 |             ai_response_complete = false;
      |             ^~~~~~~~~~~~~~~~~~~~
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c: At top level:
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:102:13: warning: 'deinit_play_pipeline' defined but not used [-Wunused-function]
  102 | static void deinit_play_pipeline(void) {
      |             ^~~~~~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/main_ws.c.obj] Error 1
make[1]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [all] Error 2
